[gd_scene load_steps=3 format=3 uid="uid://nwb4n4gtqpwn"]

[ext_resource type="Script" path="res://scripts/shop_button.gd" id="1_8ncxb"]
[ext_resource type="AudioStream" uid="uid://cvntlds3habf6" path="res://audio/sfx/Coin_Spend.wav" id="2_isx73"]

[node name="ShopButton" type="Button"]
offset_right = 136.0
offset_bottom = 136.0
script = ExtResource("1_8ncxb")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 132.0
offset_bottom = 27.0
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 31.0
offset_right = 116.0
offset_bottom = 127.0

[node name="PricePanel" type="Panel" parent="."]
layout_mode = 0
offset_top = -33.0
offset_right = 136.0
offset_bottom = -2.0

[node name="Label" type="Label" parent="PricePanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 132.0
offset_bottom = 27.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinSpend" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_isx73")

[connection signal="button_up" from="." to="." method="_on_button_up"]
